# network-transport-amqp

./: .gitignore  .travis.yml  README.md  network-transport-amqp.cabal  travis_install_deps.sh
examples/: ChatClient.hs  ChatServer.hs  Makefile
src/Network/Transport/: AMQP.hs
src/Network/Transport/AMQP/Internal/: Types.hs
tests/: TestAMQP.hs  TestAPI.hs  TestCH.hs  Tests.hs
