name:                network-transport-amqp
version:             0.2.0.0
synopsis:            AMQP-based transport layer for distributed-process (aka Cloud Haskell)
description:         AMQP-based transport layer for distributed-process (aka Cloud Haskell)
license:             MIT
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

Source-Repository head
  Type:     git
  Location: https://github.com/adinapoli/network-transport-ampq

flag ch-tests
  description: Build test suites that require distributed-process to be installed.
  default:     False

library
  exposed-modules:
    Network.Transport.AMQP
  other-modules:
    Network.Transport.AMQP.Internal.Types
  -- other-extensions:    
  build-depends:       
      base >= 4.0 && < 5.0
    , amqp >= 0.8.3 && < 0.13
    , cereal >= 0.4.0.0
    , async >= 0.2.0
    , string-conv
    , stm >= 2.4
    , stm-chans >= 0.3
    , network-transport >= 0.4.0
    , exceptions >= 0.3
    , bytestring < 0.11
    , containers >= 0.5.0.0
    , uuid >= 1.2.6
    , text >= 0.11
    , lens-family
    , lens-family-th

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
  default-extensions: DeriveDataTypeable

Test-Suite amqp-tests
  type:               exitcode-stdio-1.0
  main-is:            TestAMQP.hs
  build-depends:      base >= 4.4 && < 5,
                      network-transport >= 0.4,
                      network-transport-amqp,
                      amqp,
                      tasty,
                      tasty-hunit,
                      network-transport-tests >= 0.1.0.1
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  hs-source-dirs:     tests
  default-language:   Haskell2010

Test-Suite api-tests
  type:               exitcode-stdio-1.0
  main-is:            TestAPI.hs
  build-depends:      base >= 4.4 && < 5,
                      network-transport >= 0.4,
                      network-transport-amqp,
                      amqp,
                      tasty,
                      tasty-hunit,
                      network-transport-tests >= 0.1.0.1
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  hs-source-dirs:     tests
  default-language:   Haskell2010

Test-Suite test-ch-core
  Type:               exitcode-stdio-1.0
  Main-Is:            TestCH.hs
  CPP-Options:        -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.CH
  default-extensions:         CPP
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:     tests
  default-language:   Haskell2010
  if flag(ch-tests)
    Build-Depends:      base >= 4.4 && < 5,
                        network-transport-amqp,
                        distributed-process-tests >= 0.4,
                        network >= 2.3,
                        network-transport >= 0.3,
                        amqp >= 0.8.3 && < 0.13,
                        test-framework >= 0.6 && < 0.9,
                        containers,
                        stm,
                        stm-chans,
                        bytestring
  if !flag(ch-tests)
    Buildable: False

Test-Suite test-ch-closure
  Type:               exitcode-stdio-1.0
  Main-Is:            TestCH.hs
  CPP-Options:        -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Closure
  default-extensions: CPP
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -caf-all -auto-all
  HS-Source-Dirs:     tests
  default-language:   Haskell2010
  if flag(ch-tests)
    Build-Depends:      base >= 4.4 && < 5,
                        network-transport-amqp,
                        distributed-process-tests >= 0.4,
                        network >= 2.3,
                        network-transport >= 0.3,
                        amqp >= 0.8.3 && < 0.13,
                        test-framework >= 0.6 && < 0.9,
                        containers,
                        stm,
                        stm-chans,
                        bytestring
  if !flag(ch-tests)
    Buildable: False

Test-Suite test-ch-stat
  Type:               exitcode-stdio-1.0
  Main-Is:            TestCH.hs
  CPP-Options:        -DTEST_SUITE_MODULE=Control.Distributed.Process.Tests.Stats
  default-extensions: CPP
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  HS-Source-Dirs:     tests
  default-language:   Haskell2010
  if flag(ch-tests)
    Build-Depends:      base >= 4.4 && < 5,
                        network-transport-amqp,
                        distributed-process-tests >= 0.4,
                        network >= 2.3,
                        network-transport >= 0.3,
                        amqp >= 0.8.3 && < 0.13,
                        test-framework >= 0.6 && < 0.9,
                        containers,
                        stm,
                        stm-chans,
                        bytestring
  if !flag(ch-tests)
    Buildable: False
